add function for twitter login

--- a/.gitignore
+++ b/.gitignore
@@ -174,3 +174,13 @@ crashlytics-build.properties
 sftp-config.json
 
 
+
+# Add
+.DS_Store
+vendor/bundle
+/log/*.log.*
+
+# rails_config
+config/settings.local.yml
+config/settings/*.local.yml
+config/environments/*.local.yml
