--- a/config/database.yml
+++ b/config/database.yml
@@ -19,8 +19,8 @@ development:
   encoding: unicode
   database: board_game_history_development
   pool: 5
-  username: postgres
-  password: aiopubap93a
+  username: board_game_history
+  password:
   host: localhost
 
   # Connect on a TCP socket. Omitted by default since the client uses a
