--- a/.gitignore
+++ b/.gitignore
@@ -184,4 +184,4 @@ config/settings.local.yml
 config/settings/*.local.yml
 config/environments/*.local.yml
 
-confing/database.yml
+config/database.yml
